--- a/Trueque_Grupo35/Vista/bootstrap/carousel.css
+++ b/Trueque_Grupo35/Vista/bootstrap/carousel.css
@@ -1,3 +1,8 @@
+*{
+  margin: 0;
+  padding:0;
+}
+
 /* GLOBAL STYLES
 -------------------------------------------------- */
 /* Padding below the footer and lighter body text */
@@ -66,6 +71,41 @@ body {
   letter-spacing: -.05rem;
 }
 
+footer{
+  background-color: whitesmoke;
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+  justify-content: center;
+  font-size: 3vw;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bolder;
+
+}
+
+footer p{
+ padding: 0.1em;
+ margin: 0;
+ text-align: center; 
+ font-size: 0.4em;  
+}
+
+footer ol{
+  font-size: 1em;
+  padding: 0px;
+  display: flex;
+  flex-direction: wrap;
+  align-items:center;
+  justify-content: space-around;
+}
+
+
+footer ol li{
+  list-style: none;
+  padding: 0.1em;
+ 
+}
+
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
@@ -87,4 +127,33 @@ body {
   .featurette-heading {
     margin-top: 7rem;
   }
+}
+
+/*QUERIES*/
+
+@media (min-width:576px){
+
+  footer ol{
+    font-size: 5em;
+    padding: 0px;
+    display: flex;
+    flex-flow: row wrap;
+    align-items:center;
+    justify-content: space-between;
+  }
+    
+}
+
+@media (min-width:768px){
+
+  footer{
+      font-size: 3vw;   
+  }    
+}
+
+@media (min-width:992px){
+
+  footer{
+      font-size: 2vw;   
+  }    
 }
