Agrego pagina de registro, y enlazo desde el index

--- a/Trueque_Grupo35/Vista/bootstrap/estilos.css
+++ b/Trueque_Grupo35/Vista/bootstrap/estilos.css
@@ -63,3 +63,19 @@ footer{
     } 
   }
   
+
+  .formulario {
+    color: #36A0FF;
+    font-size: 27px;
+    padding: 10px;
+}
+
+.bigicon {
+    font-size: 35px;
+    color: #36A0FF;
+}
+
+.formu{
+    margin-bottom: 50px;
+    border: 3px solid rgb(20, 252, 248);
+}
