--- a/Trueque_Grupo35/Vista/bootstrap/carousel.css
+++ b/Trueque_Grupo35/Vista/bootstrap/carousel.css
@@ -1,3 +1,4 @@
+/*NAVBAR*/
 *{
   margin: 0;
   padding:0;
@@ -13,48 +14,85 @@ body {
   color: #5a5a5a;
 }
 
-
-/* CUSTOMIZE THE CAROUSEL
--------------------------------------------------- */
-
-/* Carousel base class */
-.carousel {
-  margin-bottom: 4rem;
-}
-/* Since positioning the image, we need to help out the caption */
-.car-caption {
-  bottom: 3rem;
-  z-index: 10;
+.img-responsive,
+.thumbnail > img,
+.thumbnail a > img,
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
+  display: block;
+  width: 100%;
+  height: auto;
 }
 
-/* Declare heights because of positioning of img element */
-.carousel-item {
-  height: 32rem;
+/* ------------------- Carousel Styling ------------------- */
+
+.carousel-inner {
+  border-radius: 40px;
 }
-.carousel-item > img {
-  position: absolute;
-  top: 0;
+
+.carousel-caption {
+  background-color: rgba(228, 228, 228, 0.5);
+  position:absolute;
   left: 0;
-  min-width: 100%;
-  height: 32rem;
+  right: 0;
+  bottom: 0;
+  z-index: 10;
+  padding: 0 0 10px 25px;
+  color: #fff;
+  text-align: left;
+}
+
+.carousel-indicators {
+  position:absolute;
+  bottom: 1;
+  right: 0;
+  left: 0;
+  width: 100%;
+  z-index: 15;
+  margin: 0;
+  padding: 0 25px 25px 0;
+  text-align: right;
+}
+
+.carousel-control.left,
+.carousel-control.right {
+  background-image: none;
 }
 
 
-/* MARKETING CONTENT
--------------------------------------------------- */
+/* ------------------- Section Styling - Not needed for carousel styling ------------------- */
 
-/* Center align the text within the three columns below the carousel */
-.marketing .col-lg-4 {
-  margin-bottom: 1.5rem;
-  text-align: center;
+.section-white {
+   padding: 3px 0;
 }
-.marketing h2 {
-  font-weight: 400;
+
+.section-white {
+  background-color: #fff;
+  color: #555;
 }
-.marketing .col-lg-4 p {
-  margin-right: .75rem;
-  margin-left: .75rem;
+
+@media screen and (min-width: 768px) {
+
+  .section-white {
+     padding: 0.5em 0;
+  }
+
 }
+
+@media screen and (min-width: 992px) {
+
+  .container {
+    max-width: 930px;
+  }
+
+@media screen and (min-width: 1400px) {
+
+  .container {
+    max-width: 80%;
+  }
+
+}
+
 
 
 
@@ -79,10 +117,11 @@ body {
 
 @media (min-width: 40em) {
   /* Bump up size of carousel content */
-  .carousel-caption p {
+ .carousel-caption p {
     margin-bottom: 1.25rem;
     font-size: 1.25rem;
     line-height: 1.4;
+
   }
 
   .featurette-heading {
