--- a/Frontend/Controlador/carousel.css
+++ b/Frontend/Controlador/carousel.css
@@ -64,6 +64,7 @@ body {
 .carousel-control.left,
 .carousel-control.right {
   background-image: none;
+
 }
 
 /* ------------------- Section Styling - Not needed for carousel styling ------------------- */
@@ -94,7 +95,7 @@ body {
 
 }
 
-@media screen and (min-width: 1400px) {
+@media screen and (max-width: 1400px) {
 
   .container {
     max-width: 80%;
