--- a/SPA2023/Frontend/truwebque/src/app/shop/component/cart/cart.component.css
+++ b/SPA2023/Frontend/truwebque/src/app/shop/component/cart/cart.component.css
@@ -1,3 +1,17 @@
 .items{-webkit-box-shadow: 4px 1px 11px -3px rgba(0,0,0,0.75);
 -moz-box-shadow: 4px 1px 11px -3px rgba(0,0,0,0.75);
 box-shadow: 4px 1px 11px -3px rgba(0,0,0,0.75);}
+
+.product{
+  font-size: 18px;
+}
+
+.description{
+  font-size: 14px;
+}
+
+
+
+.precio{
+  align-items: end;
+}
