--- a/SPA2023/Frontend/truwebque/src/app/shop/component/all-products/all-products.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/shop/component/all-products/all-products.component.html
@@ -14,7 +14,7 @@
           </div>
         </div>
         <div *ngFor="let product of products" class="carousel-item">
-          <div class="row row-cols-5">
+          <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 ">
             <div class="col mb-3 mb-sm-0">
               <div class="card " style=" height: 20rem; width: 10rem;">
                 <div class="card-body">
@@ -33,6 +33,25 @@
                 </div>
               </div>
             </div>
+           <div class="col d-none d-sm-block">
+              <div class="card" style=" height: 20rem; width: 10rem;">
+                <div class="card-body">
+                  <h5 class="card-title">Special title treatment</h5>
+                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="col d-none d-sm-block">
+              <div class="card" style=" height: 20rem; width: 10rem;">
+                <div class="card-body">
+                  <h5 class="card-title">Special title treatment</h5>
+                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+
           </div>
         </div>
 
