Modulo Page y componentes

--- a/SPA2023/Frontend/truwebque/src/app/app.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/app.component.html
@@ -1,3 +1,7 @@
 <div class="container">
+  <app-header-component></app-header-component>
+  <app-carrusel-component></app-carrusel-component>
+  <app-footer-component></app-footer-component>
+
   <router-outlet></router-outlet>
 </div>
