link navbar fixed

--- a/SPA2023/Frontend/truwebque/src/app/pages/footer-component/footer-component.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/pages/footer-component/footer-component.component.html
@@ -1,6 +1,6 @@
 
      <!-- FOOTER -->
-     <footer class="main-background">
+     <footer class="main-background fixed-bottom bg-dark text-center">
         <ol>
           <li>
             <a href="Frontend/Vista/login.html">
