--- a/SPA2023/Frontend/truwebque/src/app/pages/home-component/home-component.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/pages/home-component/home-component.component.html
@@ -1,6 +1,6 @@
 
-     
-  
+<app-carrusel-component></app-carrusel-component>
+
       <div class="container-marketing">
         <div class="row">
           <div class="col-lg-4">
@@ -9,7 +9,7 @@
               height="140" xmlns="http://www.w3.org/2000/svg" aria-label="Placeholder: 140x140"
               preserveAspectRatio="xMidYMid slice" role="img">
             <title>Placeholder</title>
-  
+
             <h2>Electro</h2>
             <p>.</p>
             <p><a class="btn btn-secondary" id="btn"  href="Frontend/Vista/publicaciones.html" role="button">Ingresar &raquo;</a></p>
@@ -20,7 +20,7 @@
               height="140" xmlns="http://www.w3.org/2000/svg" aria-label="Placeholder: 140x140"
               preserveAspectRatio="xMidYMid slice" role="img">
             <title>Placeholder</title>
-  
+
             <h2>Objetos</h2>
             <p>.</p>
             <p><a class="btn btn-secondary" id="btn"  href="Frontend/Vista/publicaciones.html" role="button">Ingresar &raquo;</a></p>
@@ -31,18 +31,18 @@
               xmlns="http://www.w3.org/2000/svg" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice"
               role="img">
             <title>Placeholder</title>
-  
+
             <h2>Ropa</h2>
             <p>.</p>
             <p><a class="btn btn-secondary" id="btn"  href="Frontend/Vista/publicaciones.html" role="button">Ingresar &raquo;</a></p>
           </div>
         </div>
-  
-  
+
+
         <!-- START THE FEATURETTES -->
-  
+
         <hr class="featurette-divider">
-  
+
         <div class="row featurette">
           <div class="col-md-7">
             <h2 class="featurette-heading">No tires lo que ya no te sirve<span class="text-muted">.</span></h2>
@@ -51,15 +51,15 @@
             </p>
           </div>
           <div class="col-md-5">
-            <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" 
+            <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
               src="../../assets/truque3.jpg" width="500" height="500" xmlns="http://www.w3.org/2000/svg"
               aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" role="img">
             <title>Placeholder</title>
           </div>
         </div>
-  
+
         <hr class="featurette-divider">
-  
+
         <div class="row featurette">
           <div class="col-md-7 order-md-2">
             <h2 class="featurette-heading">Intercambia todo aquello que no usas<span class="text-muted">.</span></h2>
@@ -71,12 +71,12 @@
               src="../../assets/truque1.jpg" width="500" height="500" xmlns="http://www.w3.org/2000/svg"
               aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" role="img">
             <title>Placeholder</title>
-  
+
           </div>
         </div>
-  
+
         <hr class="featurette-divider">
-  
+
         <div class="row featurette">
           <div class="col-md-7">
             <h2 class="featurette-heading">Conectate con el mundo del trueque<span class="text-muted">.</span></h2>
@@ -88,11 +88,10 @@
               src="../../assets/truque2.jpg" width="500" height="500" xmlns="http://www.w3.org/2000/svg"
               aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" role="img">
             <title>Placeholder</title>
-  
+
           </div>
         </div>
-  
+
         <hr class="featurette-divider">
-  
-   
- 
+
+
