--- a/SPA2023/Frontend/truwebque/src/app/pages/header-component/header-component.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/pages/header-component/header-component.component.html
@@ -9,16 +9,16 @@
       <div class="collapse navbar-collapse" id="mynavbar">
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
-            <a class="nav-link" href="">Home</a>
+            <a class="nav-link" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/categoria">Categorias</a>
+            <a class="nav-link" [routerLink]="['/']">Categorias</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/ingresar">Ingresar</a>
+            <a class="nav-link" [routerLink]="['/login']">Ingresar</a>
           </li>
           <li class="nav-item">
-             <a class="nav-link" href="/carrito">Carrito</a>
+             <a class="nav-link" [routerLink]="['/shop/cart']">Carrito</a>
            </li>
         </ul>
         <form class="d-flex">
