--- a/SPA2023/Frontend/truwebque/src/app/shop/component/cart/cart.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/shop/component/cart/cart.component.html
@@ -16,13 +16,19 @@
 
     <h1 class="text-center fw-bold">Mis articulos</h1>
 
+    <div class="container text-center"  *ngIf="hasProducts;else elseBlock"><h1>No tienes productos en el carrito,</h1>
+      <h4>sigue navegando y encuentra lo que necesitas</h4></div>
+
+      <ng-template #elseBlock></ng-template>
     <!--Items start-->
-    <div class="container items rounded" style="height: 64px">
+    <div class="container items rounded"
+    *ngFor="let product of productsInCart"
+    style="height: 64px">
       <div class="row pt-2">
         <div class="col-2 d-flex justify-content-center align-items-center">
           <img
             class="rounded"
-            src="https://th.bing.com/th/id/OIP.2bNUJ-z5UnaJfuclcYMWAgHaEK?pid=ImgDet&rs=1"
+            src="{{product.image}}"
             alt="Img"
             srcset=""
             style="height: 48px; width: 48"
@@ -31,10 +37,10 @@
 
         <div class="col-4">
           <div class="row">
-            <div class="col-6 product text-nowrap">1</div>
+            <div class="col-6 product text-nowrap">{{product.title}}</div>
           </div>
           <div>
-            <div class="col-6 description text-nowrap">Descripcion corta</div>
+            <div class="col-6 description text-nowrap">{{product.quantity}}</div>
           </div>
         </div>
 
@@ -55,7 +61,7 @@
             (mouseover)="fillTrash()"
             (mouseleave)="fillTrash()"
           ></i>
-          <h6 class="">$Precio</h6>
+          <h6 class="">{{product.price}}</h6>
         </div>
       </div>
     </div>
