--- a/SPA2023/Frontend/truwebque/src/styles.css
+++ b/SPA2023/Frontend/truwebque/src/styles.css
@@ -121,19 +121,29 @@ footer ol li{
   
   }
 
-  owl-carousel-o {
+
+  .carousel {
+    
     width: 100%;
+    height: 400px;
   }
   
-  owl-carousel-o img {
-    width: 100%;
+  .carousel .carousel-item {
+    height: 400px;
+  }
+  
+  .carousel .carousel-item img {
+    max-width: 100%;
     height: auto;
   }
   
-  @media (min-width: 768px) {
-    owl-carousel-o {
-      max-width: 80%;
+  @media (max-width: 767px) {
+    .carousel {
+      height: 200px;
+    }
+  
+    .carousel .carousel-item {
+      height: 200px;
     }
   }
   
-
