Enlace de links del footer hacia las paginas correspondientes. Primer commit de prueba

--- a/SPA2023/Frontend/truwebque/src/app/pages/footer-component/footer-component.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/pages/footer-component/footer-component.component.html
@@ -3,7 +3,7 @@
      <footer class="main-background fixed-bottom bg-dark text-center">
         <ol>
           <li>
-            <a href="Frontend/Vista/login.html">
+            <a class="nav-link" [routerLink]="['/login']">
               <p>Ingresar</p>
             </a>
           </li>
@@ -18,17 +18,17 @@
             </a>
           </li>
           <li>
-              <a href="#">
+            <a class="nav-link" [routerLink]="['/quienessomos']">
               <p>Quienes somos</p>
             </a>
           </li>
           <li>
-              <a href="Frontend/Vista/info.html">
+            <a class="nav-link" [routerLink]="['/tyc']">
               <p>Términos y condiciones</p>
             </a>
           </li>
           <li>
-              <a href="Frontend/Vista/info.html">
+            <a class="nav-link" [routerLink]="['/preguntasfrecuentes']">
               <p>Preguntas frecuentes</p>
             </a>
           </li>
