Agrego el router a la pag de Contacto desde el footer

--- a/SPA2023/Frontend/truwebque/src/app/pages/footer-component/footer-component.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/pages/footer-component/footer-component.component.html
@@ -33,7 +33,7 @@
             </a>
           </li>
           <li>
-            <a href="#">
+            <a class="nav-link" [routerLink]="['/contacto']">
               <p>Contacto</p>
             </a>
           </li>
