edición de homepage y eliminar componente navbar

--- a/SPA2023/Frontend/truwebque/src/app/pages/carrusel-component/carrusel-component.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/pages/carrusel-component/carrusel-component.component.html
@@ -1,6 +1,7 @@
 <carousel>
-    <slide *ngFor="let image of images">
+  <slide *ngFor="let image of images">
+    <a href="#">
       <img [src]="image.src" [alt]="image.alt">
-    </slide>
-  </carousel>
-  
+    </a>
+  </slide>
+</carousel>
