--- a/SPA2023/Frontend/truwebque/src/app/pages/header-component/header-component.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/pages/header-component/header-component.component.html
@@ -1,6 +1,10 @@
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="javascript:void(0)">TRUWEBQUE</a>
+<head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+</head>
+
+<nav class="navbar navbar-expand-sm navbar-custom">
+    <div class="container-fluid" div style="font-weight: bold;">
+      <a class="navbar-brand" href="">TRUWEBQUE</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -16,12 +20,14 @@
             <a class="nav-link" href="/ingresar">Ingresar</a>
           </li>
           <li class="nav-item">
-             <a class="nav-link" href="/carrito">Carrito</a>
-           </li>
-        </ul>
+            <a class="nav-link" href="/carrito">
+              <i class="fas fa-shopping-cart"></i>
+              </a>
+          </li>
+      </ul>
         <form class="d-flex">
-          <input class="form-control me-2" type="text" placeholder="Search">
-          <button class="btn btn-primary" type="button">Search</button>
+          <input class="form-control me-2" type="text" placeholder="Buscar">
+          <button type="button" class="btn btn-light">Buscar</button>
         </form>
       </div>
     </div>
