--- a/SPA2023/Frontend/truwebque/src/app/pages/home-component/home-component.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/pages/home-component/home-component.component.html
@@ -1,58 +1,95 @@
 
-     
-  
-      <div class="container-marketing">
-        <div class="row">
-          <div class="col-lg-4">
-            <p></p>
-            <img class="bd-placeholder-img rounded-circle" src="Frontend/Vista/img/electro.jpg" alt="" width="140"
-              height="140" xmlns="http://www.w3.org/2000/svg" aria-label="Placeholder: 140x140"
-              preserveAspectRatio="xMidYMid slice" role="img">
-            <title>Placeholder</title>
-  
-            <h2>Electro</h2>
-            <p>.</p>
-            <p><a class="btn btn-secondary" id="btn"  href="Frontend/Vista/publicaciones.html" role="button">Ingresar &raquo;</a></p>
+<app-carrusel-component></app-carrusel-component>
+
+<br>
+
+
+<section class="wrapper">
+  <div class="container-fostrap">
+      <div>
+          <h2 class="heading">
+              ¡Comenzá a intercambiar!
+          </h2>
+          <br>
+      </div>
+      <div class="content">
+          <div class="container">
+              <div class="row">
+                  <div class="col-xs-12 col-sm-4">
+                      <div class="card">
+                          <a class="img-card" href="">
+                          <img src="../../assets/electro.png" />
+                        </a>
+                          <div class="card-content" div style="text-align: center;">
+                              <h5 class="card-title">
+                                  <a href="">Electro
+                                </a>
+                              </h5>
+                             
+                          </div>
+                          <div class="card-read-more">
+                              <a href="" class="btn btn-link btn-block custom-link">
+                                  Ver más
+                              </a>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-xs-12 col-sm-4">
+                      <div class="card">
+                          <a class="img-card" href="">
+                          <img src="../../assets/objetos.png" />
+                        </a>
+                          <div class="card-content" div style="text-align: center">
+                              <h5 class="card-title">
+                                  <a href="">Objetos
+                                </a>
+                              </h5>
+                              
+                          </div>
+                          <div class="card-read-more">
+                              <a href="" class="btn btn-link btn-block custom-link">
+                                Ver más
+                              </a>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-xs-12 col-sm-4">
+                      <div class="card">
+                          <a class="img-card" href="">
+                          <img src="../../assets/ropa.png" />
+                        </a>
+                          <div class="card-content" div style="text-align: center">
+                              <h4 class="card-title">
+                                  <a href="">Ropa
+                                </a>
+                              </h4>
+                            
+                          </div>
+                          <div class="card-read-more">
+                              <a href="" class="btn btn-link btn-block custom-link">
+                                Ver más
+                              </a>
+                          </div>
+                      </div>
+                  </div>
+              </div>
           </div>
-          <div class="col-lg-4">
-            <p></p>
-            <img class="bd-placeholder-img rounded-circle" src="../../assets/objetos.jpg" alt="" width="140"
-              height="140" xmlns="http://www.w3.org/2000/svg" aria-label="Placeholder: 140x140"
-              preserveAspectRatio="xMidYMid slice" role="img">
-            <title>Placeholder</title>
-  
-            <h2>Objetos</h2>
-            <p>.</p>
-            <p><a class="btn btn-secondary" id="btn"  href="Frontend/Vista/publicaciones.html" role="button">Ingresar &raquo;</a></p>
-          </div>
-          <div class="col-lg-4">
-            <p></p>
-            <img class="bd-placeholder-img rounded-circle" src="../../assets/ropa.jpg" alt="" width="140" height="140"
-              xmlns="http://www.w3.org/2000/svg" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice"
-              role="img">
-            <title>Placeholder</title>
-  
-            <h2>Ropa</h2>
-            <p>.</p>
-            <p><a class="btn btn-secondary" id="btn"  href="Frontend/Vista/publicaciones.html" role="button">Ingresar &raquo;</a></p>
-          </div>
-        </div>
-  
-  
-        <!-- START THE FEATURETTES -->
-  
-        <hr class="featurette-divider">
+      </div>
+  </div>
+</section>
+
+<hr class="featurette-divider">
   
         <div class="row featurette">
-          <div class="col-md-7">
+          <div class="col-md-7 d-flex align-items-center justify-content-center flex-column " div style="text-align: center;" >
             <h2 class="featurette-heading">No tires lo que ya no te sirve<span class="text-muted">.</span></h2>
-            <p class="lead">Si tenes objetos que solo ocupan lugar en tu hogar y no sabes qué hacer con ellos, desde
+            <p class="lead">No tires lo que ya no te sirve Si tenes objetos que solo ocupan lugar en tu hogar y no sabes qué hacer con ellos, desde
               TRUwEbQUE te hacemos saber que hay miles de Argentinos que seguramente serían felices con ellos en su poder.
             </p>
           </div>
           <div class="col-md-5">
             <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" 
-              src="../../assets/truque3.jpg" width="500" height="500" xmlns="http://www.w3.org/2000/svg"
+              src="../../assets/trueque3.png" width="500" height="500" xmlns="http://www.w3.org/2000/svg"
               aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" role="img">
             <title>Placeholder</title>
           </div>
@@ -61,14 +98,14 @@
         <hr class="featurette-divider">
   
         <div class="row featurette">
-          <div class="col-md-7 order-md-2">
+          <div class="col-md-7 order-md-2 d-flex align-items-center justify-content-center flex-column" div style="text-align: center;">
             <h2 class="featurette-heading">Intercambia todo aquello que no usas<span class="text-muted">.</span></h2>
             <p class="lead">No solo lograrás hacer más espacio en tu hogar, sino que como recompensa podrás obtener algún
               otro elemento o servicio de tu interés. Sin gastar dinero, y ayudando a nuestro medio ambiente!</p>
           </div>
           <div class="col-md-5 order-md-1">
             <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-              src="../../assets/truque1.jpg" width="500" height="500" xmlns="http://www.w3.org/2000/svg"
+              src="../../assets/trueque1.png" width="500" height="500" xmlns="http://www.w3.org/2000/svg"
               aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" role="img">
             <title>Placeholder</title>
   
@@ -78,14 +115,14 @@
         <hr class="featurette-divider">
   
         <div class="row featurette">
-          <div class="col-md-7">
+          <div class="col-md-7 d-flex align-items-center justify-content-center flex-column" div style="text-align: center;">
             <h2 class="featurette-heading">Conectate con el mundo del trueque<span class="text-muted">.</span></h2>
             <p class="lead">Conocerás gente nueva, de tu zona, o de otros lugares del país. Esto te permitirá crear una
               red de nuevos contactos con los que poder intercambiar más elementos en un futuro.</p>
           </div>
           <div class="col-md-5">
             <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-              src="../../assets/truque2.jpg" width="500" height="500" xmlns="http://www.w3.org/2000/svg"
+              src="../../assets/trueque2.png" width="500" height="500" xmlns="http://www.w3.org/2000/svg"
               aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" role="img">
             <title>Placeholder</title>
   
@@ -96,3 +133,45 @@
   
    
  
+      <!--
+        <div class="container-marketing">
+        <div class="row">
+          <div class="col-lg-4">
+            <p></p>
+            <img class="bd-placeholder-img" src="../../assets/electro.jpg" alt="" width="140"
+              height="140" xmlns="http://www.w3.org/2000/svg" aria-label="Placeholder: 140x140"
+              preserveAspectRatio="xMidYMid slice" role="img">
+            <title>Placeholder</title>
+  
+            <h3>Electro</h3>
+            
+            <p><a class="btn btn-secondary" id="btn"  href="Frontend/Vista/publicaciones.html" role="button">Ingresar &raquo;</a></p>
+          </div>
+          <div class="col-lg-4">
+            <p></p>
+            <img class="bd-placeholder-img rounded-circle" src="../../assets/objetos.jpg" alt="" width="140"
+              height="140" xmlns="http://www.w3.org/2000/svg" aria-label="Placeholder: 140x140"
+              preserveAspectRatio="xMidYMid slice" role="img">
+            <title>Placeholder</title>
+  
+            <h2>Objetos</h2>
+            
+            <p><a class="btn btn-secondary" id="btn"  href="Frontend/Vista/publicaciones.html" role="button">Ingresar &raquo;</a></p>
+          </div>
+          <div class="col-lg-4">
+            <p></p>
+            <img class="bd-placeholder-img rounded-circle" src="../../assets/ropa.jpg" alt="" width="140" height="140"
+              xmlns="http://www.w3.org/2000/svg" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice"
+              role="img">
+            <title>Placeholder</title>
+  
+            <h2>Ropa</h2>
+            
+            <p><a class="btn btn-secondary" id="btn"  href="Frontend/Vista/publicaciones.html" role="button">Ingresar &raquo;</a></p>
+          </div>
+        </div>
+  
+  
+         START THE FEATURETTES -->
+  
+        
