--- a/SPA2023/Frontend/truwebque/src/app/pages/preguntas-frecuentes-component/preguntas-frecuentes-component.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/pages/preguntas-frecuentes-component/preguntas-frecuentes-component.component.html
@@ -1,83 +1,32 @@
-
-
 <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingOne">
       <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-        Accordion Item #1
+        Quienes somos
       </button>
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+        <p>Buenas Internauta! Somos un Grupo de Estudiantes Del ISPC - Instituto Superior Politecnico Cordoba. 
+          Entusiastas del Mundo de la informatica, Autodidactas y Amantes del Mundo Geek.</p>
+          <p>TRUWEBQUE surgio de la idea de Poder hacer intercambios sin necesidad de tener que manejar
+             dinero y que las personas pudieran utlizar la plataforma de manera gratuita.</p>
+             <p> En este Proyecto utilizamos varias tecnologias, cada uno aporto un poco del conocimiento que tenia.
+               Para mas detalles dejo link a Nuestra Pagina Web de presentacion, 
+              en cual se detalla lo que hemos hecho y con que recursos trabajamos.</p>                  
+            <p>Gracias por Tomarte el Tiempo de leer esto! Espero Que Cualquier Consulta no dudes en Contactarnos!</p>
       </div>
     </div>
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingTwo">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-        Accordion Item #2
+        Términos y condiciones
       </button>
     </h2>
     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-      </div>
-    </div>
-  </div>
-  <div class="accordion-item">
-    <h2 class="accordion-header" id="headingThree">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-        Accordion Item #3
-      </button>
-    </h2>
-    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-      <div class="accordion-body">
-        <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-      </div>
-    </div>
-  </div>
-</div>
-
-<main role="main">
-    <div class="container">
-        <br>
-        <br>
-        <div class="accordion" id="accordionExample">
-            <div class="card">
-              <div class="card-header" id="headingOne">
-                <h2 class="mb-0">
-                  <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    Quienes Somos
-                  </button>
-                </h2>
-              </div>     
-              <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-                <div class="card-body">
-                  <p>Buenas Internauta! Somos un Grupo de Estudiantes Del ISPC - Instituto Superior Politecnico Cordoba. 
-                    Entusiastas del Mundo de la informatica, Autodidactas y Amantes del Mundo Geek.</p>
-                    <p>TRUWEBQUE surgio de la idea de Poder hacer intercambios sin necesidad de tener que manejar
-                       dinero y que las personas pudieran utlizar la plataforma de manera gratuita.</p>
-                       <p> En este Proyecto utilizamos varias tecnologias, cada uno aporto un poco del conocimiento que tenia.
-                         Para mas detalles dejo link a Nuestra Pagina Web de presentacion, 
-                        en cual se detalla lo que hemos hecho y con que recursos trabajamos.</p>                  
-                      <p>Gracias por Tomarte el Tiempo de leer esto! Espero Que Cualquier Consulta no dudes en Contactarnos!</p>
-                  <a href="http://www.truwebque.tk/" target="_blank"> Conoce a los developers haciendo click aquí</a>
-                  <br>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-header" id="headingTwo">
-                <h2 class="mb-0">
-                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    Terminos y Condiciones
-                  </button>
-                </h2>
-              </div>
-              <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                <div class="card-body">
-                    <h5>Normas para la publicación de objetos</h5>
+        <h5>Normas para la publicación de objetos:</h5>
                     <hr>
                     <p> No se permite la venta de productos.</p>
                     <hr>
@@ -85,30 +34,51 @@
                     <hr>
                     <p> El usuario no podrá usar este servicio para transmitir cualquier clase de material ilegal, 
                     amenazante o cualquier otro tipo de material que pueda ser considerado ofensivo.</p>
-                     
-                    Cualquier material que vaya en contra de los intereses de TRUwEbQUE, que constituya una ofensa criminal, 
-                        viole los derechos de otros, o cualquier otro tipo de violación aplicable 
-                        en su localidad, o por las leyes internacionales
+                    <hr>
+                     <p> Cualquier material que vaya en contra de los intereses de TRUwEbQUE, que constituya una ofensa criminal, 
+                      viole los derechos de otros, o cualquier otro tipo de violación aplicable 
+                      en su localidad, o por las leyes internacionales
+                    </p>
+                    <hr>
                     <strong> TRUwEbQUE se reserva el derecho de dar de baja cualquier cuenta que vaya en contra de estas normas,
                     bajo su total discreción, y sin necesidad de dar ninguna razón.</strong>
                     <br>
                     <hr>
-                    <a href="../Vista/doc/Terminos_Condiciones.pdf" target="_blank">Leer Terminos y Condiciones - Politicas de Privacidad</a> 
+                    <a href="/tyco" target="_blank"></a> 
                     <br>
-         
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-header" id="headingThree">
-                <h2 class="mb-0">
-                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    Preguntas Frecuentes
-                  </button>
-                </h2>
-              </div>
-              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-                <div class="card-body">
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+        Preguntas Frecuentes
+      </button>
+    </h2>
+    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <p><strong>¿Cómo me contacto con la otra persona para realizar el trueque?</strong></p>
+    
+                    Para contactarte con el otro usuario, deberás ingresar a la publicación de tu interés y presionar el botón que dice: "Truequear". 
+                    En ese momento se abrirá un formulario para que realices la consulta y puedas establecer una conexión con el dueño del artículo que te interesa.<p></p>
+                    <hr>
+                    <p><strong>¿Debo pagar para suscribirme a la página?</strong></p>
+    
+                    No. No se cobra una suscripción. Solamente te pedimos los datos de registro para que todo sea más transparente y puedas
+                    realizar un intercambio de la manera más segura posible.<p></p>
+                    <hr>
+                    <p><strong>¿Puedo comprar un artículo en vez de intercambiar?</strong></p>
+                    Dentro de la plataforma no. No dispone esta página de pasarelas de pago. La intención es solamente que puedas conectarte
+                    con otras personas para realizar intercambios, sin gastar dinero.<p></p>
+                    <hr>
+                    <p><strong>¿Cuáles son los medios envío de los productos?</strong></p>
+                    <p>envíos corren por cuenta de cada usuario, eligiendo el medio que resulte más conveniente. 
+                    La plataforma no ofrece esa funcionalidad, sino que una vez que te pongas en contacto con la otra persona
+                    podes buscar la mejor alternativa para enviar o recibir tu producto.</p> 
+                    <hr>
+                    <p><strong>¿Puedo ofrecer servicios a cambio de productos?</strong></p>
+                    Si, podes ofrecer tus servicios. La idea de la plataforma es que puedas contactar con gente de tus alrededores, 
+                    para ofrecer por ejemplo servicios de pintura, albañilería, tareas domésticas, etc. a cambio de un producto de tu interés.
                     <p><strong>¿Cómo me contacto con la otra persona para realizar el trueque?</strong></p>
     
                     Para contactarte con el otro usuario, deberás ingresar a la publicación de tu interés y presionar el botón que dice: "Truequear". 
@@ -131,10 +101,7 @@
                     <p><strong>¿Puedo ofrecer servicios a cambio de productos?</strong></p>
                     Si, podes ofrecer tus servicios. La idea de la plataforma es que puedas contactar con gente de tus alrededores, 
                     para ofrecer por ejemplo servicios de pintura, albañilería, tareas domésticas, etc. a cambio de un producto de tu interés.
-                </div>
-              </div>
-            </div>
-          </div>
-    
-        <hr class="featurette-divider">
-    
+               
+      </div>
+    </div>
+  </div>
