Edición header y footer, carrusel

--- a/SPA2023/Frontend/truwebque/src/app/app.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/app.component.html
@@ -1,2 +1,6 @@
 
   <app-header-component></app-header-component>
+  <br>
+  <router-outlet></router-outlet>
+  <app-footer-component></app-footer-component>
+
