--- a/SPA2023/Frontend/truwebque/src/app/shop/component/cart/cart.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/shop/component/cart/cart.component.html
@@ -65,7 +65,8 @@
     <hr />
     <div class="container">
       <div class="row">
-        <div class="col-10"><h2>Total</h2></div>
+        <div class="col-10"><h2>Total</h2>
+        <button class="btn btn-primary" (click)="suma()">sum</button></div>
         <div class="col-2"><h6 >suma</h6></div>
 
 
